syntax = "proto3";
package super_admin;
option go_package = "nfxid/protos/gen/access/super_admin;superadminpb";
import "google/protobuf/timestamp.proto";
message SuperAdmin {
  string user_id = 1;
  google.protobuf.Timestamp created_at = 2;
}
service SuperAdminService {
  rpc GetSuperAdminByUserID (GetSuperAdminByUserIDRequest) returns (GetSuperAdminByUserIDResponse);
  rpc ListSuperAdmins (ListSuperAdminsRequest) returns (ListSuperAdminsResponse);
  rpc CreateSuperAdmin (CreateSuperAdminRequest) returns (CreateSuperAdminResponse);
}
message GetSuperAdminByUserIDRequest { string user_id = 1; }
message GetSuperAdminByUserIDResponse { SuperAdmin super_admin = 1; }
message ListSuperAdminsRequest { optional int32 limit = 1; optional int32 offset = 2; }
message ListSuperAdminsResponse { repeated SuperAdmin super_admins = 1; }
message CreateSuperAdminRequest { string user_id = 1; }
message CreateSuperAdminResponse {}
